# deepagent-stock-research

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
src/: __init__.py  agent.py  config.py  prompts.py
src/agents/: __init__.py  graph.py  nodes.py  state.py
src/models/: __init__.py  research.py  stock.py
src/services/: __init__.py  data_provider.py  llm.py
src/subagents/: __init__.py
src/tools/: __init__.py  analysis.py  news_search.py  stock_data.py
